fix existing expense styling/spacing

--- a/Budgetation.App/ClientApp/src/styles.scss
+++ b/Budgetation.App/ClientApp/src/styles.scss
@@ -55,6 +55,12 @@ body { margin: 0; /*font-family: Roboto, "Helvetica Neue", sans-serif;*/ }
 .mr-4{margin-right: 1.6rem !important;}
 .mr-5{margin-right: 2rem !important;}
 
+.my-0{margin-top: 0 !important;margin-bottom: 0 !important;}
+.my-1{margin-top: .8rem !important;margin-bottom: .8rem !important;}
+
+.mx-0{margin-left: 0 !important;margin-right: 0 !important;}
+.mx-1{margin-left: .8rem !important;margin-right: .8rem !important;}
+
 .overflow-y-hidden {overflow-y: hidden;}
 .overflow-y-auto {overflow-y: auto;}
 
